--- a/ShapeMaker/nbproject/project.properties
+++ b/ShapeMaker/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ShapeMaker
+application.vendor=evan5090
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,23 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Craps.jar
+dist.jar=${dist.dir}/ShapeMaker.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.BreezySwing.jar=H:\\!_Martens\\Grade12ICSPublic\\_jarfiles\\BreezySwing.jar
+file.reference.core.jar=H:\\!_Martens\\Grade12ICSPublic\\_jarfiles\\core.jar
+file.reference.G4P.jar=H:\\!_Martens\\Grade12ICSPublic\\_jarfiles\\G4P.jar
+file.reference.TerminalIO.jar=H:\\!_Martens\\Grade12ICSPublic\\_jarfiles\\TerminalIO.jar
+file.reference.TurtleGraphics.jar=H:\\!_Martens\\Grade12ICSPublic\\_jarfiles\\TurtleGraphics.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.BreezySwing.jar}:\
+    ${file.reference.G4P.jar}:\
+    ${file.reference.TerminalIO.jar}:\
+    ${file.reference.TurtleGraphics.jar}:\
+    ${file.reference.core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=shapemaker.ShapeMaker
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
